Don't auto-adjust date and time values per column width. (fdo#34484)

Actually we want to auto-adjust values per column width *only when*
the implicit number format is pure numeric.  Note that each cell may
have two associated number format types: one that's set by the user
explicitly, and one that's set by the formula interpreter inplicitly.
We need to care for both.